--- a/index.html
+++ b/index.html
@@ -237,6 +237,11 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
-  <script src = "js/main.js"></script>
+  <script src = "js/util.js"></script>
+  <script src = "js/description-foto.js"></script>
+  <script src = "js/big-foto.js"></script>
+  <script src = "js/upload-file.js"></script>
+  <script src = "js/validity.js"></script>
+
 </body>
 </html>
