done module5-task3

--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
   <script src = "js/description-foto.js"></script>
   <script src = "js/big-foto.js"></script>
   <script src = "js/upload-file.js"></script>
+  <script src = "js/messages.js"></script>
   <script src = "js/validity.js"></script>
 
 </body>
