--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <section class="error">
       <div class="error__inner">
         <h2 class="error__title">Ошибка загрузки файла</h2>
-        <div class="error__buttons">
+        <div class="error__buttons" hidden>
           <button type="button" class="error__button">Попробовать снова</button>
           <button type="button" class="error__button">Загрузить другой файл</button>
         </div>
@@ -237,12 +237,13 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
+  <script src = "js/load.js"></script>
   <script src = "js/util.js"></script>
-  <script src = "js/description-foto.js"></script>
-  <script src = "js/big-foto.js"></script>
-  <script src = "js/upload-file.js"></script>
-  <script src = "js/messages.js"></script>
-  <script src = "js/validity.js"></script>
+<!--  <script src = "js/description-photo.js"></script>-->
+<!--  <script src = "js/big-photo.js"></script>-->
+<!--  <script src = "js/upload-file.js"></script>-->
+<!--  <script src = "js/messages.js"></script>-->
+<!--  <script src = "js/validity.js"></script>-->
 
 </body>
 </html>
