--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="error__inner">
         <h2 class="error__title">Ошибка загрузки файла</h2>
         <div class="error__buttons hidden">
-<!--          <button type="button" class="error__button hidden">Попробовать снова</button>-->
+          <button type="button" class="error__button hidden">Попробовать снова</button>
 <!--          <button type="button" class="error__button hidden">Загрузить другой файл</button>-->
         </div>
       </div>
@@ -237,7 +237,13 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
-  <script src = "js/load.js"></script>
-  <script src = "js/util.js"></script>
+  <script src="js/util.js"></script>
+  <script src="js/gallery.js"></script>
+  <script src="js/service.js"></script>
+  <script src="js/messages.js"></script>
+  <script src="js/validity.js"></script>
+  <script src="js/upload-file.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/big-photo.js"></script>
 </body>
 </html>
