--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
     <section class="error">
       <div class="error__inner">
         <h2 class="error__title">Ошибка загрузки файла</h2>
-        <div class="error__buttons hidden">
-          <button type="button" class="error__button hidden">Попробовать снова</button>
-<!--          <button type="button" class="error__button hidden">Загрузить другой файл</button>-->
+        <div class="error__buttons">
+          <button type="button" class="error__button">Попробовать снова</button>
+          <button type="button" class="error__button">Загрузить другой файл</button>
         </div>
       </div>
     </section>
