--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
   </template>
 
   <script src="js/util.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/service.js"></script>
   <script src="js/messages.js"></script>
