--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
 
+  <script src="js/popups-error-success.js"></script>
   <script src="js/util.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/gallery.js"></script>
